modified:   Contributor-list.json 	modified:   Documents.html 	modified:   Thanks.html 	modified:   UpdateLog.json 	new file:   example.html 	modified:   index.html 暂存的网站样式更新

--- a/Thanks.html
+++ b/Thanks.html
@@ -206,6 +206,7 @@
             <div>
                 <a href="Documents.html">帮助手册</a>
                 <a href="Thanks.html">感谢名单</a>
+                <a href="index.html#changelog">更新日志</a>
                 <button id="theme-toggle" class="nav-toggle" aria-label="切换主题"><i class="fas fa-moon"></i></button>
                 <button id="contrast-toggle" class="nav-toggle" aria-label="高对比">HC</button>
                 <button id="motion-toggle" class="nav-toggle" aria-label="动画开关">⭘</button>
