--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <!-- 预加载动画与运行时长依赖（用于预加载动画与运行时长计数） -->
+    <link rel="stylesheet" href="https://registry.npmmirror.com/hexo-theme-redefine/2.8.5/files/source/assets/odometer-theme-minimal.css">
+    <script src="https://registry.npmmirror.com/hexo-theme-redefine/2.8.5/files/source/js/build/libs/anime.min.js"></script>
+    <script src="https://registry.npmmirror.com/hexo-theme-redefine/2.8.5/files/source/js/build/libs/odometer.min.js"></script>
     <!-- 优先使用 woff2，若无则回退到 ttf；font-display:swap 提升可见性 -->
     <style>
         @font-face{
@@ -24,6 +28,18 @@
             font-style: normal;
             font-display: swap;
         }
+    </style>
+    <style>
+        /* Preloader & runtime widget styles (adapted) */
+        :root{ --preloader-background-color: var(--card-bg); --preloader-text-color: var(--text-dark); }
+        @media (prefers-color-scheme: dark){ :root{ --preloader-background-color:#071018; --preloader-text-color:var(--text-light); } }
+        .preloader{ display:flex;flex-direction:column;gap:1rem;align-items:center;justify-content:center;position:fixed;padding:12px;top:0;right:0;bottom:0;left:0;width:100vw;height:100vh;background-color:var(--preloader-background-color);z-index:11000;transition:opacity .2s ease-in-out }
+        .preloader .ml13{ font-size:2.6rem;color:var(--preloader-text-color);letter-spacing:-1px;font-weight:500;font-family:'SJ-Narrow','Poppins',sans-serif;text-align:center }
+        .preloader .word{ display:inline-flex;flex-wrap:wrap;white-space:nowrap }
+        .preloader .letter{ display:inline-block;line-height:1em }
+        /* 运行时长小组件，固定右下 */
+        .runtime-widget{ position:fixed; right:18px; bottom:18px; z-index:11001; background:var(--card-bg); padding:10px 14px; border-radius:12px; box-shadow:var(--shadow); font-size:13px; color:var(--text); display:flex; gap:8px; align-items:center; }
+        .runtime-widget .odometer{ font-weight:700; margin:0 4px; }
     </style>
     <script>
         // 在 CSS 之前设置主题属性，避免闪烁
@@ -833,6 +849,32 @@
                 transform: translateY(0);
             }
         }
+        /* 更新日志时间线样式 */
+        .changelog-section { margin: 24px 0 40px; }
+        .changelog-wrap { position: relative; }
+        .timeline { position: relative; padding-left: 48px; }
+        .timeline::before { content: ''; position: absolute; left:18px; top:0; bottom:0; width:4px; background: linear-gradient(180deg, var(--primary-blue), var(--light-blue)); border-radius:2px; }
+        .timeline-year { display:block; text-align:center; margin:28px 0; color:var(--muted); font-weight:700; }
+        .timeline-item { position:relative; margin:16px 0 32px; }
+        .timeline-item { opacity:0; transform:translateX(-18px); transition:opacity 420ms cubic-bezier(.2,.9,.2,1) var(--delay,0ms), transform 420ms cubic-bezier(.2,.9,.2,1) var(--delay,0ms); }
+        .timeline-dot { position:absolute; left:6px; top:8px; width:24px; height:24px; border-radius:50%; background:var(--card-bg); border:4px solid var(--primary-blue); box-shadow:0 6px 18px rgba(0,0,0,0.06); }
+        .timeline-card { margin-left:60px; background:var(--card-bg); border-radius:12px; padding:18px; box-shadow:var(--shadow); border-left:4px solid var(--primary-blue); position:relative; }
+        .timeline-card h4 { margin:0 0 6px;font-size:1.15rem;color:var(--heading-color); }
+        .timeline-card .subtitle { font-size:0.95rem;color:var(--muted);margin-bottom:8px;font-weight:600 }
+        .timeline-card .content { color:var(--text); line-height:1.6; }
+        .timeline-card .whisper { display:block;margin-top:10px;color:rgba(100,110,130,0.7);font-style:italic;font-size:0.95rem }
+        .timeline-card .time { position:absolute; right:12px; bottom:10px;color:var(--muted);font-size:0.9rem }
+        @media (max-width:768px){ .timeline{padding-left:12px} .timeline-card{margin-left:42px;padding:14px} .timeline-dot{left:0} .timeline::before{left:10px} }
+        .timeline-item.visible{ opacity:1; transform:none; }
+
+        /* 当打开更新日志时：内联展示时间线并隐藏正文（不改变背景） */
+        /* 保持背景图案与顶部导航可见，仅隐藏主内容区域内的其他节点 */
+        body.changelog-open #changelog{ display:block !important; position:relative; left:auto; transform:none; top:auto; width:100%; max-height:none; overflow:visible; padding:22px; border-radius:12px; box-shadow:var(--shadow); }
+        /* 只隐藏主内容区域（包含更新日志的 wrapper）内的其它元素，保留背景装饰和导航 */
+        body.changelog-open #main-wrapper > :not(#changelog){ display:none !important; }
+        /* 适度呈现时间线容器以获得专注感（内联动画） */
+        body.changelog-open .changelog-section .changelog-wrap{ transform: translateY(0); animation: changelogEnter 320ms ease both; }
+        @keyframes changelogEnter{ from{opacity:0; transform: translateY(6px) scale(.998)} to{opacity:1; transform: translateY(0) scale(1)} }
     </style>
 </head>
 <body>
@@ -848,6 +890,7 @@
             <div class="nav-right nav-links">
                 <a href="Documents.html">帮助手册</a>
                 <a href="Thanks.html">感谢名单</a>
+                <a href="#" id="changelog-link">更新日志</a>
                 <button id="theme-toggle" class="nav-toggle" aria-label="切换主题"><i class="fas fa-moon"></i></button>
                 <button id="contrast-toggle" class="nav-toggle" aria-label="高对比">HC</button>
                 <button id="motion-toggle" class="nav-toggle" aria-label="动画开关">⭘</button>
@@ -864,7 +907,23 @@
             <div class="bg-element bg-3"></div>
         </div>
         
-        <div class="content-wrapper">
+        <div class="content-wrapper" id="main-wrapper">
+            <!-- 内嵌子页面：更新日志（默认隐藏，通过顶部“更新日志”进入） -->
+            <section id="changelog" class="changelog-section" aria-labelledby="changelog-title" style="display:none;">
+                <div style="max-width:1180px;margin:6px auto 28px;padding:22px;position:relative;">
+                    <div style="display:flex;align-items:center;justify-content:space-between;gap:12px">
+                        <h2 id="changelog-title" style="font-family:'SJ-Narrow','Poppins',sans-serif;font-size:36px;margin:0 0 12px;color:var(--heading-color)">更新日志</h2>
+                        <div>
+                            <button id="changelog-close" class="nav-toggle" aria-label="关闭更新日志">关闭</button>
+                        </div>
+                    </div>
+                    <p class="note" style="margin-bottom:18px;color:var(--muted)">以下为网站更新记录（按时间倒序显示）。</p>
+                    <div class="changelog-wrap">
+                        <div class="timeline" id="timeline">正在加载…</div>
+                    </div>
+                </div>
+            </section>
+
             <!-- 头部区域 -->
             <div class="header">
                 <div class="avatar-container">
@@ -1129,6 +1188,107 @@
                 });
             }
             const s = document.createElement('style'); s.textContent='@keyframes heartPulse{0%{transform:scale(1)}50%{transform:scale(1.08)}100%{transform:scale(1)}}'; document.head.appendChild(s);
+        })();
+
+        // 更新日志：读取 UpdateLog.json 并渲染纵向时间线（内嵌子页面）
+        (function(){
+            const link = document.getElementById('changelog-link');
+            const section = document.getElementById('changelog');
+            const timeline = document.getElementById('timeline');
+            function animateTimelineItems(){
+                const items = timeline ? Array.from(timeline.querySelectorAll('.timeline-item')) : [];
+                items.forEach((it, idx)=>{
+                    it.style.setProperty('--delay', (idx*80)+'ms');
+                    setTimeout(()=> it.classList.add('visible'), idx*80 + 50);
+                });
+            }
+
+            function showChangelog(){
+                if(!section) return;
+                section.style.display = 'block';
+                // 隐藏主页其余内容 via body class
+                document.body.classList.add('changelog-open');
+                // push hash
+                history.replaceState && history.replaceState({}, '', '#changelog');
+                // 确保内容加载并动画
+                loadChangeLog().then(()=>{
+                    // small delay to ensure DOM appended
+                    setTimeout(()=>{
+                        animateTimelineItems();
+                    },120);
+                }).catch(()=>{
+                    // ignore
+                });
+                section.scrollIntoView({behavior:'smooth'});
+            }
+            function hideChangelog(){
+                if(!section) return;
+                document.body.classList.remove('changelog-open');
+                section.style.display = 'none';
+                // clear hash
+                try{ history.replaceState && history.replaceState({}, '', location.pathname); }catch(e){}
+            }
+            if(link){ link.addEventListener('click', (e)=>{ e.preventDefault(); showChangelog(); }); }
+            // close button
+            const closeBtn = document.getElementById('changelog-close');
+            if(closeBtn){ closeBtn.addEventListener('click', (e)=>{ e.preventDefault(); hideChangelog(); }); }
+
+            async function loadChangeLog(){
+                if(!timeline) return;
+                try{
+                    const res = await fetch('UpdateLog.json');
+                    if(!res.ok) throw new Error('读取 UpdateLog.json 失败');
+                    const data = await res.json();
+                    // 展开每个 top-level entry 的 Log 子项为单独记录并附带 TimeStamp/UpdateLevel
+                    const items = [];
+                    (data || []).forEach(entry=>{
+                        const ts = entry.TimeStamp || '';
+                        const level = entry.UpdateLevel || '';
+                        const logs = Array.isArray(entry.Log) ? entry.Log : [];
+                        logs.forEach(log => {
+                            items.push({
+                                time: ts,
+                                updateLevel: level,
+                                title: log.Title || '',
+                                content: log.Content || '',
+                                whisper: log.Whisper || ''
+                            });
+                        });
+                    });
+                    // 按时间降序（解析为 Date）
+                    items.sort((a,b)=>{ const da=new Date(a.time); const db=new Date(b.time); return db - da; });
+                    // 渲染，按年分组
+                    timeline.innerHTML = '';
+                    let lastYear = null;
+                    items.forEach(it=>{
+                        const y = (it.time || '').toString().split('/')[0] || (new Date(it.time)).getFullYear();
+                        if(y && y !== lastYear){
+                            const yearEl = document.createElement('div'); yearEl.className='timeline-year'; yearEl.textContent = y; timeline.appendChild(yearEl); lastYear = y;
+                        }
+                        const itemEl = document.createElement('div'); itemEl.className='timeline-item';
+                        const dot = document.createElement('div'); dot.className='timeline-dot';
+                        const card = document.createElement('div'); card.className='timeline-card';
+                        const title = document.createElement('h4'); title.textContent = it.title || '(更新)';
+                        const subtitle = document.createElement('div'); subtitle.className='subtitle'; subtitle.textContent = it.updateLevel || '';
+                        const content = document.createElement('div'); content.className='content'; content.innerHTML = (it.content || '').replace(/\n/g,'<br>');
+                        const whisper = document.createElement('div'); whisper.className='whisper'; whisper.textContent = it.whisper || '';
+                        const time = document.createElement('div'); time.className='time'; time.textContent = it.time || '';
+                        card.appendChild(subtitle);
+                        card.appendChild(title);
+                        card.appendChild(content);
+                        if((it.whisper||'').trim()) card.appendChild(whisper);
+                        card.appendChild(time);
+                        itemEl.appendChild(dot);
+                        itemEl.appendChild(card);
+                        timeline.appendChild(itemEl);
+                    });
+                    if(items.length===0) timeline.innerHTML = '<p class="note">暂无更新记录。</p>';
+                }catch(err){ console.error(err); timeline.innerHTML = '<p class="note">加载更新日志失败。</p>'; }
+            }
+            // 如果 URL hash 是 changelog，则自动打开
+            if(location.hash === '#changelog') showChangelog();
+            // defer load
+            document.addEventListener('DOMContentLoaded', ()=>{ loadChangeLog(); if(location.hash==='#changelog') setTimeout(()=>{ const el=document.getElementById('changelog'); el && el.scrollIntoView({behavior:'auto'}); },200); });
         })();
     </script>
 </body>
